Fixed a bug on iPhone

--- a/src/resources/sass/blocks/table.scss
+++ b/src/resources/sass/blocks/table.scss
@@ -125,10 +125,6 @@
         min-height: 50px;
     }
 }
-
-
-
-
 .details-table__checkbox--margin {
   margin: 5px 0px -5px !important;
   background-color: transparent !important;
@@ -140,6 +136,14 @@
   }
 }
 
+.details-table__placeholder:empty:not(:focus):before {
+  content: attr(data-placeholder)
+}
+
+
+.ShowClear:empty:not(:focus):before {
+  content: attr(data-placeholder)
+}
 
 .padding5{
   padding-left: 5px;
@@ -334,12 +338,10 @@ tbody{
   display: block;
   float: right;
   border: none;
-  width: 20px;
-  height: 20px;
-  padding-right: 70px;
-  outline: none;
-  @media screen and (max-width: $screen-xs) {
-    padding-top: 15px;
+  font-size: 14px;
+  padding-right: 40px;
+  outline: none;  @media screen and (max-width: $screen-xs) {
+    padding-top: 12px;
   }
   &.edit-button-toggle {
     color: #1670f6;
