--- a/src/resources/sass/layout/top/_message.scss
+++ b/src/resources/sass/layout/top/_message.scss
@@ -67,6 +67,7 @@
 .new-message__show{
     opacity: 1;
     right: 20px;
+    padding-left: 50px;
     transition: opacity 1s , right 0.6s;
       @media screen and (max-width: $screen-sm) {
         right: 10px !important;
@@ -97,6 +98,7 @@
     line-height: 0.5;
     padding: 10px;
     margin-left: 5px;
+    padding-right: 0;
 
   h6{
     font-family: $semi-heading-family;
@@ -105,6 +107,8 @@
   p{
     font-family: $basic-heading-family;
     font-weight: $bold;
+    line-height: 1.1;
+    margin: -5px 0 10px;
   }
 }
 
@@ -124,6 +128,9 @@
 .new-message__icon--img{
   width: 32px;
   height: 32px;
+  position: absolute;
+  top: 21px;
+  left: 15px;
 }
 
 .new-message__button{
